WindowsServerCore 1809 does not provide d2d1.dll library required by awt.dll

XMLWordPrintable

    • 2d
    • 9
    • b16
    • x86_64
    • windows

        ADDITIONAL SYSTEM INFORMATION :
        Windows Server Core 1809 Container on Windows Server 2019 using openJDK 11.3.0+5

        A DESCRIPTION OF THE PROBLEM :
        Previous versions of the windowsservercore container provided the d2d1.dll as system library, but not version 1809 anymore. Since awt.dll is required even in headless environments for e.g. font handling it is required to provide the d2d1.dll in some other way.




          1. JCK-testlist.txt
            170 kB
          2. task.sh
            2 kB
          3. index_Ctor.jtr
            7 kB

              Assignee:
              Philip Race
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              20 Start watching this issue

                Created:
                Updated:
                Resolved: