8229800: WindowsServerCore 1809 does not provide d2d1.dll library required by awt.dll

Reviewed-by: jdv, serb, aaivanov